--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "http-server -p 8081 src/",
+    "build": "cp -r src/* dist/"
   },
   "author": "Cedric Haase",
   "license": "ISC",
