--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,1 +1,14 @@
--- TODO
+services:
+
+  shortd:
+    build: ../shortd
+    environment:
+      - GIN_MODE=release
+      - HTTP_PORT=8080
+    ports:
+      - 8081:8080
+
+  ui:
+    build: ../ui
+    ports:
+      - 8082:80
